# news_lab

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  build.rs
deploy/searxng/: README.md  docker-compose.yml  settings.yml
docs/: radar-flow.md
resources/: icon.icns
scripts/: build_app.sh  make_icon.py  make_installer.sh
src/: cache.rs  config.rs  llm.rs  main.rs  summarizer.rs  ui.rs
src/fetcher/: arxiv.rs  cases.rs  cncf.rs  docs.rs  huggingface.rs  mod.rs  podcast.rs  release.rs  search.rs  tech.rs
src/knowledge/: mod.rs  terminal.rs
src/radar/: cases.rs  mod.rs  terminal.rs
