[package]
name = "news_lab"
version = "0.1.3"
edition = "2021"

[dependencies]
tokio          = { version = "1",    features = ["full"] }
reqwest        = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde          = { version = "1",    features = ["derive"] }
serde_json     = "1"
async-openai   = "0.28"
inquire        = "0.9"
indicatif      = "0.18"
console        = "0.15"
quick-xml      = "0.36"
chrono         = { version = "0.4",  features = ["serde"] }
regex          = "1"
anyhow         = "1"
dotenvy        = "0.15"
comfy-table    = "7"
html-escape    = "0.2"
futures        = "0.3"
unicode-width  = "0.1"
